--- a/src/app/holy-quran/holy-quran.component.scss
+++ b/src/app/holy-quran/holy-quran.component.scss
@@ -122,7 +122,7 @@ a:-webkit-any-link {
 
 
 :host {
-  ::ng-deep .ui-colorpicker-preview {
+  ::ng-deep .p-inputtext {
     width: 25px;
     height: 25px;
   }
